--- a/encyclopedia/templates/encyclopedia/wikisearch.html
+++ b/encyclopedia/templates/encyclopedia/wikisearch.html
@@ -9,7 +9,7 @@
 
     <ul>
         {% for entry in searchlist %}
-            <li><a href="wiki/{{ entry }}">{{ entry }}</a></li>
+            <li><a href="editwiki/{{ entry }}">{{ entry }}</a></li>
         {% endfor %}
     </ul>
 
